<resources>
    <string name="app_name">accountingExpensesIncomeBeautySalon</string>
    <string name="choosing_salon">Выбор салона</string>
    <string name="salon">Салон</string>
    <string name="password">Пароль</string>
    <string name="ds_admin">ds admin</string>
    <string name="add_client">Добавить клиента</string>
    <string name="edit_client">Редактировать клиента</string>
    <string name="add_income">Добавить доход</string>
    <string name="add_expense">Добавить расход</string>
    <string name="report">Отчёт</string>
    <string name="client">Клиент</string>
    <string name="master">Мастер</string>
    <string name="procedure">Процедура</string>
    <string name="type_calculation">Тип расчета</string>
    <string name="amount">Сумма</string>
    <string name="amount_cash">Сумма наличкой</string>
    <string name="amount_card">Сумма картой</string>
    <string name="sum_facts">Сумма фактив</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="delete_btn"><![CDATA[<-]]></string>
    <string name="add">Добавить</string>
    <string name="cancellation">Отмена</string>
    <string name="create_salon">Создать салон</string>
    <string name="edit_salon">Редактировать салон</string>
    <string name="edit_data_salon">Редактировать данные в салоне</string>
    <string name="give_access">Дать доступ</string>
    <string name="edit_access">Редактировать доступ</string>
    <string name="check_fixes_salon">Проверить все исправления в салоне</string>
    <string name="amount_salon_date">Сумма салона по датам</string>
    <string name="detailed_report">Подробный отчёт</string>
    <string name="trusted_devices">Доверенные утройства</string>
    <string-array name="ds_admin_list">
        <item>Admin_!</item>
        <item>Admin_2</item>
    </string-array>
</resources>