<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accounting_activity">

    <Button
        android:id="@+id/add_client"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/add_client"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/edit_client"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_client"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:text="@string/edit_client"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_income"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_income"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_client" />

    <Button
        android:id="@+id/add_expense"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_expense"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/report"
        app:layout_constraintStart_toEndOf="@+id/add_income"
        app:layout_constraintTop_toBottomOf="@+id/edit_client" />

    <Button
        android:id="@+id/report"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/report"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintTop_toBottomOf="@+id/edit_client" />

    <TableLayout
        android:layout_width="378dp"
        android:layout_height="282dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_expense"
        app:layout_constraintVertical_bias="0.16">

        <TableRow>
            <TextView android:text="@string/client"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="10dp" />
            <TextView android:text="@string/master"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="10dp" />
            <TextView android:text="@string/procedure"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="10dp" />
            <TextView android:text="@string/type_calculation"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="10dp" />
            <TextView android:text="@string/amount"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="10dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>