<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmountCardActivity">

    <TextView
        android:id="@+id/amount_card"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/amount_card"
        android:textAllCaps="true"
        android:textSize="37sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_amountCash"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_card" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:columnCount="3"
        android:padding="16dp"
        android:rowCount="4"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="246dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button_1"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="276dp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_2"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="276dp" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_3"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="285dp" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_4"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="365dp" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_5"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="378dp" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_6"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="396dp" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_7"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="453dp" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_8"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="467dp" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_9"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="453dp" />

        <Button
            android:id="@+id/button_c"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/c"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="515dp" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_0"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="515dp" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/delete_btn"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="515dp" />
    </GridLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancellation"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout"
        app:layout_constraintVertical_bias="0.376" />

    <Button
        android:id="@+id/cancellation"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:text="@string/cancellation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout"
        app:layout_constraintVertical_bias="0.494" />

</androidx.constraintlayout.widget.ConstraintLayout>